# NigelCrypt

./: CMakeLists.txt  README.md  example.cpp  nigelcrypt.hpp
include/nigelcrypt/: nigelcrypt.hpp  nigelcrypt_c.h
packed/: secret_blob.hpp
sdk/: README.md
sdk/examples/: example_c.c
src/: nigelcrypt.cpp  nigelcrypt_c.cpp
tools/: nigelcrypt_pack.cpp  pack_sample.ps1
