cmake_minimum_required(VERSION 3.20)
project(NigelCrypt VERSION 0.2.0 LANGUAGES CXX)

option(NIGELCRYPT_BUILD_SHARED "Build shared library" ON)
option(NIGELCRYPT_BUILD_STATIC "Build static library" ON)
option(NIGELCRYPT_BUILD_TOOLS "Build tools" ON)
option(NIGELCRYPT_BUILD_EXAMPLES "Build examples" ON)

set(NIGELCRYPT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

if(NIGELCRYPT_BUILD_STATIC)
    add_library(nigelcrypt_static STATIC src/nigelcrypt.cpp)
    target_include_directories(nigelcrypt_static PUBLIC ${NIGELCRYPT_INCLUDE_DIR})
    target_compile_features(nigelcrypt_static PUBLIC cxx_std_20)
    target_compile_definitions(nigelcrypt_static PRIVATE NIGELCRYPT_BUILD_LIB)
    if(WIN32)
        target_link_libraries(nigelcrypt_static PRIVATE bcrypt crypt32)
    else()
        message(FATAL_ERROR "NigelCrypt currently supports Windows only.")
    endif()
endif()

if(NIGELCRYPT_BUILD_SHARED)
    add_library(nigelcrypt_shared SHARED src/nigelcrypt.cpp)
    target_include_directories(nigelcrypt_shared PUBLIC ${NIGELCRYPT_INCLUDE_DIR})
    target_compile_features(nigelcrypt_shared PUBLIC cxx_std_20)
    target_compile_definitions(nigelcrypt_shared PRIVATE NIGELCRYPT_BUILD_LIB NIGELCRYPT_SHARED)
    if(WIN32)
        target_link_libraries(nigelcrypt_shared PRIVATE bcrypt crypt32)
    else()
        message(FATAL_ERROR "NigelCrypt currently supports Windows only.")
    endif()
endif()

add_library(nigelcrypt_header INTERFACE)

add_library(nigelcrypt_c STATIC src/nigelcrypt_c.cpp)
target_include_directories(nigelcrypt_c PUBLIC ${NIGELCRYPT_INCLUDE_DIR})
target_compile_features(nigelcrypt_c PUBLIC cxx_std_20)
if(WIN32)
    target_link_libraries(nigelcrypt_c PRIVATE bcrypt crypt32)
else()
    message(FATAL_ERROR "NigelCrypt currently supports Windows only.")
endif()
target_include_directories(nigelcrypt_header INTERFACE ${NIGELCRYPT_INCLUDE_DIR})

target_compile_features(nigelcrypt_header INTERFACE cxx_std_20)

if(NIGELCRYPT_BUILD_TOOLS)
    add_executable(nigelcrypt_pack tools/nigelcrypt_pack.cpp)
    target_compile_features(nigelcrypt_pack PRIVATE cxx_std_20)
    target_include_directories(nigelcrypt_pack PRIVATE ${NIGELCRYPT_INCLUDE_DIR})
    if(WIN32)
        target_link_libraries(nigelcrypt_pack PRIVATE bcrypt crypt32)
    endif()
endif()

if(NIGELCRYPT_BUILD_EXAMPLES)
    add_executable(nigelcrypt_example example.cpp)
    target_compile_features(nigelcrypt_example PRIVATE cxx_std_20)
    target_include_directories(nigelcrypt_example PRIVATE ${NIGELCRYPT_INCLUDE_DIR})
    if(TARGET nigelcrypt_static)
        target_link_libraries(nigelcrypt_example PRIVATE nigelcrypt_static)
    else()
        target_link_libraries(nigelcrypt_example PRIVATE nigelcrypt_header)
    endif()
endif()

install(DIRECTORY include/ DESTINATION include)
install(TARGETS nigelcrypt_c ARCHIVE DESTINATION lib)
if(TARGET nigelcrypt_static)
    install(TARGETS nigelcrypt_static ARCHIVE DESTINATION lib)
endif()
if(TARGET nigelcrypt_shared)
    install(TARGETS nigelcrypt_shared RUNTIME DESTINATION bin LIBRARY DESTINATION lib)
endif()
